tests/ui/regions/wf-bound-region-in-local-issue-115175.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/wf-bound-region-in-local-issue-115175.rs:7:13
   |
LL |     let _ = None::<Static<T>>;
   |             ^^^^^^^^^^^^^^^^^
   |             |
   |             the parameter type `T` must be valid for the static lifetime...
   |             ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn test<T: 'static>() {
   |          +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
